--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,21 @@ jobs:
       - run:
           name: List docker images
           command: docker image list
+      - deploy:
+          name: Deploy
+          command: |
+            if [ x"$CIRCLE_TAG" != x ]; then
+              docker login -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_ENDPOINT
+              docker tag varanus-redash:latest ${DOCKER_ENDPOINT}/varanus/varanus-redash:latest
+              docker push ${DOCKER_ENDPOINT}/varanus/varanus-redash:latest
+            fi
+workflows:
+  version: 2
+  build-n-deploy:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
