--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             fi
 workflows:
   version: 2
-  build-n-deploy:
+  build-and-deploy:
     jobs:
       - build:
           filters:
