pin incompatible libraries

--- a/requirements.txt
+++ b/requirements.txt
@@ -51,3 +51,6 @@ python-geoip-geolite2==2015.303
 # Uncomment the requirement for ldap3 if using ldap.
 # It is not included by default because of the GPL license conflict.
 # ldap3==2.2.4
+
+requests-oauthlib==1.0.0
+oauthlib==2.1.0
