--- a/requirements_all_ds.txt
+++ b/requirements_all_ds.txt
@@ -31,4 +31,6 @@ certifi
 # to the other package snowflake is using (that's compatible with it).
 # snowflake_connector_python==1.6.10
 
+pandas==0.24.2
+numpy==1.16.4
 pymapd==0.7.1
